--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -27,3 +27,6 @@ enable = true
 [editor.statusline]
 right = ["diagnostics", "selections", "register", "position", "position-percentage", "total-line-numbers"]
 center = ["version-control"]
+
+[keys.normal]
+C-y = ":sh zellij run -f -x 10% -y 10% --width 80% --height 80% -- bash ~/.config/helix/yazi-picker.sh"
